--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -34,7 +34,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/base_margin_triple"
             android:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_TABLE_TITLE"
-            android:textAppearance="?textAppearanceHeadline6" />
+            android:textAppearance="?textAppearanceSubtitle1" />
 
         <Space
             android:layout_width="0dp"
