--- a/app/src/main/res/layout/claim_bulletpoint_row.xml
+++ b/app/src/main/res/layout/claim_bulletpoint_row.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/bulletPointTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?textAppearanceHeadline6"
+                android:textAppearance="?textAppearanceSubtitle1"
                 tools:text="Ersättning" />
 
             <TextView
