--- a/app/src/main/res/layout/payout_history_header.xml
+++ b/app/src/main/res/layout/payout_history_header.xml
@@ -7,5 +7,5 @@
     android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_double"
     android:layout_marginBottom="@dimen/base_margin_double"
-    android:textAppearance="?textAppearanceHeadline6"
+    android:textAppearance="?textAppearanceSubtitle1"
     tools:text="2019" />
