--- a/app/src/main/res/layout/referral_invite_row.xml
+++ b/app/src/main/res/layout/referral_invite_row.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_double"
-        android:textAppearance="?textAppearanceHeadline6"
+        android:textAppearance="?textAppearanceSubtitle1"
         app:layout_constraintStart_toEndOf="@id/avatarContainer"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Spöke" />
