--- a/app/src/main/res/layout/activity_connect_payment.xml
+++ b/app/src/main/res/layout/activity_connect_payment.xml
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|center_vertical"
                     android:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE"
-                    android:textAppearance="?textAppearanceHeadline6" />
+                    android:textAppearance="?textAppearanceSubtitle1" />
 
                 <Button
                     android:id="@+id/notNow"
