--- a/app/src/main/res/layout/additional_buildings_row.xml
+++ b/app/src/main/res/layout/additional_buildings_row.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:textAppearance="?textAppearanceHeadline6"
+        android:textAppearance="?textAppearanceSubtitle1"
         tools:text="22 kvadratmeter, indraget vatten" />
 
 </LinearLayout>
