--- a/app/src/main/res/layout/bottom_sheet_charity_explanation.xml
+++ b/app/src/main/res/layout/bottom_sheet_charity_explanation.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginBottom="@dimen/base_margin"
         android:text="@string/CHARITY_INFO_DIALOG_TITLE"
-        android:textAppearance="?textAppearanceHeadline6" />
+        android:textAppearance="?textAppearanceSubtitle1" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_double"
         android:text="@string/CHARITY_INFO_DIALOG_HOW_IT_WORKS_TITLE"
-        android:textAppearance="?textAppearanceHeadline6" />
+        android:textAppearance="?textAppearanceSubtitle1" />
 
     <TextView
         style="?textAppearanceBody2"
