--- a/app/src/main/res/layout/chat_message_user.xml
+++ b/app/src/main/res/layout/chat_message_user.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:textAppearance="?textAppearanceBody3"
+            android:textAppearance="?textAppearanceCaption""
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
