--- a/app/src/main/res/layout/coverage_info_layout.xml
+++ b/app/src/main/res/layout/coverage_info_layout.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin"
-            android:textAppearance="?textAppearanceHeadline6"
+            android:textAppearance="?textAppearanceSubtitle1"
             app:layout_constraintStart_toEndOf="@id/bulletPointIcon"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Ersättning" />
