--- a/app/src/main/res/layout/dashboard_info_card.xml
+++ b/app/src/main/res/layout/dashboard_info_card.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textAppearance="?textAppearanceHeadline6"
+            android:textAppearance="?textAppearanceSubtitle1"
             tools:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE" />
 
         <TextView
