--- a/app/src/main/res/layout/dialog_ratings.xml
+++ b/app/src/main/res/layout/dialog_ratings.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/RATINGS_DIALOG_TITLE"
-        android:textAppearance="?textAppearanceHeadline6" />
+        android:textAppearance="?textAppearanceSubtitle1" />
 
     <TextView
         android:id="@+id/paragraph"
