--- a/app/src/main/res/layout/file_upload_dialog.xml
+++ b/app/src/main/res/layout/file_upload_dialog.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin"
         android:text="@string/FILE_UPLOAD_OVERLAY_TITLE"
-        android:textAppearance="?textAppearanceHeadline6"
+        android:textAppearance="?textAppearanceSubtitle1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
