--- a/app/src/main/res/layout/payment_history_item.xml
+++ b/app/src/main/res/layout/payment_history_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin"
-        android:textAppearance="?textAppearanceHeadline6"
+        android:textAppearance="?textAppearanceSubtitle1"
         tools:text="179 kr" />
 
 </LinearLayout>
