--- a/app/src/main/res/layout/payout_history_title.xml
+++ b/app/src/main/res/layout/payout_history_title.xml
@@ -7,4 +7,4 @@
     android:layout_marginTop="@dimen/base_margin_double"
     android:layout_marginBottom="@dimen/base_margin_double"
     android:text="@string/PAYMENT_HISTORY_TITLE"
-    android:textAppearance="?textAppearanceHeadline6" />
+    android:textAppearance="?textAppearanceSubtitle1" />
