--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -11,11 +11,13 @@
     <item name="colorOnSurface" type="color">@color/colorPrimary</item>
     <item name="colorSecondary" type="color">#BE9BF3</item>
     <item name="colorOnSecondary" type="color">@color/hedvig_white</item>
+    <item name="colorPlaceholder" type="color">#45FAFAFA</item>
 
     <item name="colorError" type="color">#E24646</item>
 
-    <item name="textColorPrimary" type="color">@color/hedvig_off_white</item>
-    <item name="textColorSecondary" type="color">@color/hedvig_white</item>
+    <item name="textColorPrimary" type="color">#8FFAFAFA</item>
+    <item name="textColorSecondary" type="color">#FAFAFA</item>
+    <item name="textColorThird" type="color">#70FAFAFA</item>
 
     <item name="colorButton" type="color">@color/colorSecondary</item>
     <item name="textColorLink" type="color">@color/colorSecondary</item>
