--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -15,9 +15,11 @@
         <item name="colorError">@color/colorError</item>
         <item name="colorOnError">@color/hedvig_white</item>
         <item name="colorButton">@color/colorButton</item>
+        <item name="colorPlaceholder">@color/colorPlaceholder</item>
         <item name="textColorLink">@color/textColorLink</item>
-        <item name="android:textColorPrimary">@color/colorPrimaryVariant</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
         <item name="android:textColorSecondary">@color/colorPrimary</item>
+        <item name="textColorThird">@color/textColorThird</item>
         <item name="fontFamily">@font/favorit_book</item>
         <item name="android:fontFamily">@font/favorit_book</item>
 
@@ -44,7 +46,6 @@
 
         <item name="textAppearanceBody1">@style/Hedvig.TextAppearance.Body1</item>
         <item name="textAppearanceBody2">@style/Hedvig.TextAppearance.Body2</item>
-        <item name="textAppearanceBody3">@style/Hedvig.TextAppearance.Body3</item>
 
         <item name="textAppearanceCaption">@style/Hedvig.TextAppearance.Caption</item>
 
@@ -62,9 +63,10 @@
     <attr name="materialButtonContainedLargeStyle" format="reference" />
     <attr name="materialButtonOutlinedLargeStyle" format="reference" />
     <attr name="materialButtonTextStyle" format="reference" />
-    <attr name="textAppearanceBody3" format="reference" />
     <attr name="colorButton" format="reference" />
     <attr name="textColorLink" format="reference" />
+    <attr name="textColorThird" format="reference" />
+    <attr name="colorPlaceholder" format="reference" />
 
     <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="buttonBarButtonStyle">?materialButtonTextStyle</item>
