--- a/app/src/debug/res/layout/activity_view_gallery.xml
+++ b/app/src/debug/res/layout/activity_view_gallery.xml
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Body 3"
-                android:textAppearance="?textAppearanceCaption"" />
+                android:textAppearance="?textAppearanceCaption" />
 
             <TextView
                 android:layout_width="wrap_content"
