--- a/app/src/main/res/layout/chat_message_hedvig_giphy.xml
+++ b/app/src/main/res/layout/chat_message_hedvig_giphy.xml
@@ -40,7 +40,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/base_margin"
             android:text="@string/CHAT_GIPHY_TITLE"
-            android:textAppearance="?textAppearanceCaption"" />
+            android:textAppearance="?textAppearanceCaption" />
 
     </LinearLayout>
 </LinearLayout>
