--- a/app/src/main/res/layout/chat_message_user.xml
+++ b/app/src/main/res/layout/chat_message_user.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/Hedvig.Theme.Widgets.Chat.User"
     android:layout_marginTop="@dimen/base_margin"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:theme="@style/Hedvig.Theme.Widgets.Chat.User">
 
     <View
         android:layout_width="0dp"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:textAppearance="?textAppearanceCaption""
+            android:textAppearance="?textAppearanceCaption"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
