--- a/app/src/main/res/layout/fragment_new_referral.xml
+++ b/app/src/main/res/layout/fragment_new_referral.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/invites"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingTop="@dimen/base_margin_double"
-    android:paddingBottom="@dimen/logged_in_tabs_bottom_padding"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hedvig.app.feature.referrals.ReferralsFragment"
-    tools:itemCount="3"
-    tools:listitem="@layout/referral_invite_row" />
+    tools:context="com.hedvig.app.feature.referrals.ReferralsFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/invites"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/logged_in_tabs_bottom_padding"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="3"
+        tools:listitem="@layout/referrals_row" />
+
+    <Button
+        android:id="@+id/share"
+        style="?materialButtonContainedLargeStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginEnd="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/logged_in_tabs_bottom_padding"
+        android:text="@string/referrals_empty.share_code_button" />
+
+</FrameLayout>
