--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -5,6 +5,9 @@
         <item name="lineHeight">24sp</item>
     </style>
 
+    <dimen name="body_1_placeholder_width">48sp</dimen>
+    <dimen name="body_1_placeholder_height">16sp</dimen>
+
     <style name="Hedvig.TextAppearance.Body2" parent="TextAppearance.MaterialComponents.Body2">
         <item name="lineHeight">20sp</item>
     </style>
@@ -13,6 +16,9 @@
         <item name="android:textColor">?android:textColorSecondary</item>
         <item name="lineHeight">24sp</item>
     </style>
+
+    <dimen name="subtitle_1_placeholder_width">48sp</dimen>
+    <dimen name="subtitle_1_placeholder_height">16sp</dimen>
 
     <style name="Hedvig.TextAppearance.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="android:letterSpacing">0.1</item>
@@ -28,6 +34,9 @@
         <item name="android:textColor">?android:textColorSecondary</item>
         <item name="android:letterSpacing">0.025</item>
     </style>
+
+    <dimen name="headline_5_placeholder_width">72sp</dimen>
+    <dimen name="headline_5_placeholder_height">24sp</dimen>
 
     <style name="Hedvig.TextAppearance.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="lineHeight">26sp</item>
