--- a/app/src/main/res/layout/referrals_row.xml
+++ b/app/src/main/res/layout/referrals_row.xml
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_inactive"
         tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.Group
@@ -48,5 +49,36 @@
         app:layout_constraintStart_toEndOf="@id/iconPlaceholder"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/placeholder_rectangle" />
+
+    <LinearLayout
+        android:id="@+id/texts"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/base_margin_double"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/icon"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?textAppearanceSubtitle1"
+            tools:text="Elsa" />
+
+        <TextView
+            android:id="@+id/refereeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/referalls_invitee_states.invited_you"
+            android:textAppearance="?textAppearanceBody2"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
