We're getting there!

--- a/app/src/main/res/layout/referrals_row.xml
+++ b/app/src/main/res/layout/referrals_row.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_inactive"
+        tools:src="@drawable/ic_clock_colorless"
         tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.Group
