--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -25,4 +25,8 @@
 
     <style name="Hedvig.Theme.TextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox" />
 
+    <style name="ThemeOverlay.Hedvig.SurfaceOnSurface" parent="">
+        <item name="colorSurface">@color/colorSurfaceOnSurface</item>
+    </style>
+
 </resources>
