--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -9,6 +9,7 @@
     <item name="colorBackground" type="color">@color/hedvig_black</item>
     <item name="colorSurface" type="color">@color/hedvig_off_black</item>
     <item name="colorOnSurface" type="color">@color/colorPrimary</item>
+    <item name="colorSurfaceOnSurface" type="color">#505050</item>
     <item name="colorSecondary" type="color">#BE9BF3</item>
     <item name="colorOnSecondary" type="color">@color/hedvig_white</item>
     <item name="colorPlaceholder" type="color">#45FAFAFA</item>
