Fix a long-standing issue of cheating in logged in screen with the paddings and margins wrt the bottom tabs
Now we actually make sure to measure it and provide the measurements
to all tab screens! So neat!

--- a/app/src/main/res/layout/activity_logged_in.xml
+++ b/app/src/main/res/layout/activity_logged_in.xml
@@ -31,7 +31,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomTabs"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_navigation_height"
+        android:layout_height="wrap_content"
         android:background="@drawable/background_bottom_nav"
         app:itemIconSize="@dimen/tab_bar_icon_size"
         app:labelVisibilityMode="labeled"
