--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,13 +7,12 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:fillViewport="true"
-    android:paddingBottom="@dimen/logged_in_tabs_bottom_padding"
+    android:paddingBottom="@dimen/base_margin_double"
     tools:context="com.hedvig.app.feature.profile.ui.ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/bottom_navigation_height">
+        android:layout_height="wrap_content">
 
         <include layout="@layout/loading_spinner" />
 
