Add a small reveal animation for the share button
In the future this should probably be a `MaterialFade`-transition

--- a/app/src/main/res/layout/fragment_new_referral.xml
+++ b/app/src/main/res/layout/fragment_new_referral.xml
@@ -25,8 +25,10 @@
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_double"
+        android:alpha="0"
         android:text="@string/referrals_empty.share_code_button"
         android:visibility="gone"
+        tools:alpha="1"
         tools:visibility="visible" />
 
 </FrameLayout>
