--- a/app/src/main/res/layout/fragment_referrals.xml
+++ b/app/src/main/res/layout/fragment_referrals.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hedvig.app.feature.referrals.ReferralsFragment">
+    tools:context="com.hedvig.app.feature.referrals.ui.tab.ReferralsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/invites"
