--- a/app/src/main/res/values/button_themes.xml
+++ b/app/src/main/res/values/button_themes.xml
@@ -3,6 +3,8 @@
 
     <style name="Hedvig.Button" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/hedvig_button_state</item>
+        <item name="android:paddingTop">@dimen/base_margin</item>
+        <item name="android:paddingBottom">@dimen/base_margin</item>
     </style>
 
     <style name="Hedvig.Button.Large">
