--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="base_margin_quadruple">32dp</dimen>
     <dimen name="base_margin_quintuple">40dp</dimen>
     <dimen name="base_margin_sextuple">48dp</dimen>
+    <dimen name="base_margin_septuple">56dp</dimen>
     <dimen name="base_margin_octuple">64dp</dimen>
 
     <dimen name="background_rounded_corners_radius">20dp</dimen>
