--- a/app/src/main/res/layout/referrals_header.xml
+++ b/app/src/main/res/layout/referrals_header.xml
@@ -16,10 +16,10 @@
     <com.hedvig.app.feature.referrals.ui.PieChartView
         android:id="@+id/piechart"
         android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="@dimen/base_margin_quintuple"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_septuple"
         android:layout_marginTop="@dimen/base_margin_sextuple"
-        android:layout_marginEnd="@dimen/base_margin_quintuple"
+        android:layout_marginEnd="@dimen/base_margin_septuple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
